2001-11-26  Jakub Jelinek  <jakub@redhat.com>

	* sparc-nat.c (fetch_inferior_registers): Don't rely
	on CORE_ADDR being 32-bit.
	(store_inferior_registers): Likewise.

2001-11-25  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/config.sed: Fix an error in etc/ at "make install"
	time on non-LFN systems where standards*.inf* expands to nothing.

	* go32-nat.c (save_npx): Avoid a warning from GCC 3.x.

2001-11-24  Pierre Muller  <muller@ics.u-strasbg.fr>
	    Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (struct so_stuff): Add objfile *objfile field needed to
	be able to remove the DLL when unloaded.  Remove unused last field.
	(handle_unload_dll): New function to handle unloading of DLL.
	(solib_symbols_add): Change return type to struct objfile *.
	(get_child_debug_event): Call handle_unload_dll function.

2001-11-24  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (_initialize_check_for_gdb_ini): New function.
	* config/i386/xm-cygwin.h: Remove obsolete handling of __CYGWIN32__.
	(GDBINIT_FILENAME): Remove.

2001-11-23  Mark Kettenis  <kettenis@gnu.org>

	Add x86 OpenBSD native configuration.
	* config/i386/obsd.mt, config/i386/tm-obsd.h, config/i386/obsd.mh,
	config/i386/nm-obsd.h: New files.
	* configure.host (i[3456]86-*-openbsd*): New host.
	* configure.tgt (i[3456]86-*-openbsd*): New target.
	* NEWS: Update.

2001-11-21  GDB Administrator  <gdbadmin@sourceware.cygnus.com>

	* GDB 5.1 was released.
	
2001-11-21  Tom Tromey  <tromey@redhat.com>

	Fix for PR gdb/209, PR gdb/156:
	* gdbarch.c, gdbarch.h: Rebuilt.
	* gdbarch.sh: Added `construct_inferior_arguments'.
	* cli/cli-decode.h (cmd_list_element): Added pre_show_hook.
	Typo fix.
	* cli/cli-setshow.c (do_setshow_command): Call the pre_show_hook.
	* infcmd.c (_initialize_infcmd): Set sfunc on `set args' command.
	(inferior_argc, inferior_argv): New globals.
	(notice_args_set): New function.
	(set_inferior_args): Clear inferior_argc and inferior_argv.